# global-support-standard

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.gss-repo.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy-cloud-run-main.yml  publish-on-main.yml  release.yml
docs/: agent-delegation-model.md  architecture.md  authorization-model.md  commands-reference.md  deploy-cloud-run.md  getting-started-consumers.md  getting-started-shops.md  multi-language-roadmap.md  releasing.md  repository-governance.md
protocols/: FORMAT.md  delivery-not-received.yaml
protocols/examples/: return-request.md
providers/mock_shop/: consumer-policies.yaml
schemas/conformance/: agent-delegation-checklist.json
sdk/typescript/: README.md  package.json
spec/: overview.md
src/global_support_standard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gss_cli/: main.py  validate.py
src/gss_core/: __init__.py  envelope.py  errors.py  models.py  security.py
src/gss_provider/: app.py  audit.py  auth.py  contracts.py  mock_adapter.py  mock_data.py  protocol_engine.py  settings.py
src/gss_webshop_shopify/: app.py  settings.py  shopify_client.py
tests/: test_cli_integration.py  test_packaging_paths.py  test_provider_api.py  test_security_helpers.py  test_shopify_webshop_project.py
tests/conformance/: test_data_guardrails.py
webshop/shopify-test-store/: .env.example  README.md  run-local.sh
