[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "global-support-standard"
version = "0.2.1"
description = "GSS Python reference implementation: provider API + CLI consumer"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Michel Norbruis" },
]
keywords = ["gss", "customer-support", "ecommerce", "api", "cli", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "typer>=0.12.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "PyYAML>=6.0.1",
]
[project.urls]
Homepage = "https://github.com/Global-Support-Standard/global-support-standard"
Repository = "https://github.com/Global-Support-Standard/global-support-standard"
Issues = "https://github.com/Global-Support-Standard/global-support-standard/issues"
Documentation = "https://github.com/Global-Support-Standard/global-support-standard/tree/main/docs"
Changelog = "https://github.com/Global-Support-Standard/global-support-standard/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "build>=1.2.0",
  "twine>=5.1.0",
  "ruff>=0.6.0",
]

[project.scripts]
gss = "gss_cli.main:run"
gss-provider = "gss_provider.app:run"
gss-shopify-provider = "gss_webshop_shopify.app:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gss_provider = ["protocols/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.coverage.report]
exclude_also = [
  "def main\\(",
  "def describe_domain\\(",
  "def _json_dict\\(",
  "def _profile\\(",
  "def _addresses\\(",
  "def _payment_methods\\(",
  "def _subscriptions\\(",
  "def _loyalty_history\\(",
  "def (orders_cancel|orders_modify|orders_reorder)\\(",
  "def (shipping_report_issue|shipping_change_address|shipping_request_redelivery|shipping_delivery_preferences)\\(",
  "def returns_(list|status|cancel|dispute|request_return_back|accept_partial)\\(",
  "def refunds_(list|status)\\(",
  "def products_.*\\(",
  "def account_(get|update|addresses_.*|change_email|change_email_recover|payment_methods_.*|delete_request|export_data)\\(",
  "def payments_.*\\(",
  "def subscriptions_.*\\(",
  "def loyalty_.*\\(",
]
